Fix spacing

--- a/style.css
+++ b/style.css
@@ -977,6 +977,11 @@ footer {
 }
 
 
+section {
+      width: 100%;
+}
+
+
 
   }
 
